--- a/content/tools/json2go/index.html
+++ b/content/tools/json2go/index.html
@@ -7,7 +7,7 @@ type: ext
 layout: tools
 ---
   <div class="row"> 
-    <div class="t-editarea col-md-5" onpaste="setTimeout(convert,1)"> 
+    <div class="t-editarea col-md-5" onpaste="setTimeout(pasteConvert,1)"> 
       <label class="col-form-label"> JSON </label> 
       <pre id="input" class="t-textarea fullHeight fixed-size form-control" contenteditable="true">{"url":"https://www.printlove.cn"}</pre> 
     </div> 
@@ -37,15 +37,6 @@ layout: tools
 	</script> 
   <script src="/js/json2go.js"></script>
   <script>
-		let tools = document.querySelectorAll('.side-nav li');
-		for (let i = 0; i < tools.length; i++) {
-			let node = tools[i];
-			if (node.querySelector('a').getAttribute('href').endsWith(document.location.pathname)) {
-				node.classList.add('active');
-				break
-			}
-		}
-
     function tagName() {
       return document.getElementById("tag").value
     }
@@ -55,5 +46,8 @@ layout: tools
     }
     document.getElementById("btnNest").onclick = function() {
       convert(false, tagName())
+    }
+    function pasteConvert() {
+      convert(true, tagName())
     }
 	</script> 
