--- a/content/tools/sql2gorm/index.html
+++ b/content/tools/sql2gorm/index.html
@@ -31,7 +31,7 @@ layout: tools
   </div> 
   <script src="https://cdn.bootcss.com/highlight.js/9.15.9/highlight.min.js">
 	</script> 
-  <script src="https://cdn.bootcss.com/highlight.js/9.15.9/languages/json.min.js">
+  <script src="https://cdn.bootcss.com/highlight.js/9.15.9/languages/sql.min.js">
 	</script> 
   <script src="https://cdn.bootcss.com/highlight.js/9.15.9/languages/go.min.js">
 	</script> 
@@ -43,12 +43,14 @@ layout: tools
       convert()
     }
 
+    let input = document.getElementById("input"),
+      output = document.getElementById("output")
     function convert() {
-      let input = document.getElementById("input")
-      let sql = input.innerHTML
+      let sql = input.innerText
       let c = new sqlToGorm()
       let res = c.sqlContent(sql)
-      document.getElementById("output").innerHTML = hljs.highlight("go", res).value;
+      
+      output.innerHTML = hljs.highlight("go", res).value;
       input.innerHTML = hljs.highlight("sql", sql).value;
     }
     convert()
