fix sql2gorm timestamp type

--- a/content/tools/sql2gorm/index.html
+++ b/content/tools/sql2gorm/index.html
@@ -9,7 +9,7 @@ layout: tools
   <div class="row"> 
     <div class="t-editarea col-md-5" onpaste="setTimeout(convert,1)"> 
       <label class="col-form-label"> SQL </label> 
-      <pre id="input" class="t-textarea fullHeight fixed-size form-control" contenteditable="plaintext-only">CREATE TABLE `blacklists`  (
+      <pre id="input" class="t-textarea fullHeight fixed-size form-control" contenteditable="true">CREATE TABLE `blacklists`  (
   `id` int(10) UNSIGNED NOT NULL AUTO_INCREMENT,
   `email` varchar(50) CHARACTER SET utf8 COLLATE utf8_unicode_ci NOT NULL,
   `type` varchar(20) CHARACTER SET utf8 COLLATE utf8_unicode_ci NOT NULL,
