--- a/content/tools/sql2gorm/index.html
+++ b/content/tools/sql2gorm/index.html
@@ -37,7 +37,7 @@ layout: tools
 	</script> 
   <script src="https://cdn.bootcss.com/clipboard.js/2.0.4/clipboard.min.js">
 	</script> 
-  <script src="/js/sql2gorm.js"></script>
+  <script src="/js/sql2gorm.js?v=1.0"></script>
   <script>
     document.getElementById("btnExpan").onclick = function() {
       convert()
