add jquery file

--- a/content/tools/sql2gorm/index.html
+++ b/content/tools/sql2gorm/index.html
@@ -37,7 +37,7 @@ layout: tools
 	</script> 
   <script src="https://cdn.bootcss.com/clipboard.js/2.0.4/clipboard.min.js">
 	</script> 
-  <script src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
+  <script src="/js/jquery-1.4.4.min.js"></script>
 
   <script>
     document.getElementById("btnExpan").onclick = function() {
