--- a/content/tools/json2go/index.html
+++ b/content/tools/json2go/index.html
@@ -8,7 +8,7 @@ layout: tools
 ---
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="navbar-collapse">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/tools/json2go">JSON 转 Golang</a>
