--- a/content/tools/json2go/index.html
+++ b/content/tools/json2go/index.html
@@ -23,18 +23,17 @@ layout: tools
     </div>
   </nav>
   <div class="row"> 
-    <div class="t-editarea col-md-5" onpaste="setTimeout(pasteConvert,1)"> 
+    <div class="t-editarea col-lg-5 col-md-12" onpaste="setTimeout(pasteConvert,1)"> 
       <label class="col-form-label"> JSON </label> 
       <pre id="input" class="t-textarea fullHeight fixed-size form-control" contenteditable="plaintext-only">{"url":"https://www.printlove.cn"}</pre> 
     </div> 
-    <div class="t-btn col-md-1">
+    <div class="t-btn col-lg-1 col-md-12">
       <button class="btn"  id="btnExpan"> 转换-展开 </button>
       <button class="btn"  id="btnNest"> 转换-嵌套 </button>
       <button class="btn btn-default" data-clipboard-action="copy" data-clipboard-target="#output"> 复制 </button>
       <button class="btn btn-default" onclick="cleanup()"> 清空 </button>
-
     </div> 
-    <div class="t-editarea col-md-6"> 
+    <div class="t-editarea col-lg-6 col-md-12"> 
       <label class="col-form-label"> GO </label> 
       <div class="float-end align-items-end">
         <label class="col-form-label">Tag：</label>
