--- a/content/tools/sql2gorm/index.html
+++ b/content/tools/sql2gorm/index.html
@@ -23,7 +23,7 @@ layout: tools
   </div>
 </nav>
   <div class="row"> 
-    <div class="t-editarea col-md-5" onpaste="setTimeout(convert,1)"> 
+    <div class="t-editarea col-lg-5 col-md-12" onpaste="setTimeout(convert,1)"> 
       <label class="col-form-label"> SQL </label> 
       <pre id="input" class="t-textarea fullHeight fixed-size form-control" contenteditable="true">CREATE TABLE `blacklists`  (
   `id` int(10) UNSIGNED NOT NULL AUTO_INCREMENT,
@@ -35,13 +35,13 @@ layout: tools
 ) ENGINE = InnoDB AUTO_INCREMENT = 1 CHARACTER SET = utf8 COLLATE = utf8_unicode_ci ROW_FORMAT = DYNAMIC;
       </pre> 
     </div>
-    <div class="t-btn col-md-1">
+    <div class="t-btn col-lg-1 col-md-12">
       <button class="btn"  id="btnExpan"> 转换 </button>
       <button class="btn btn-default" data-clipboard-action="copy" data-clipboard-target="#output"> 复制 </button>
       <button class="btn btn-default" onclick="cleanup()"> 清空 </button>
 
     </div> 
-    <div class="t-editarea col-md-6"> 
+    <div class="t-editarea col-lg-6 col-md-12"> 
       <label class="col-form-label"> GORM </label> 
       <pre class="t-textarea fullHeight fixed-size form-control"><code id="output"></code></pre> 
   </div>
