--- a/content/tools/json2go/index.html
+++ b/content/tools/json2go/index.html
@@ -51,6 +51,7 @@ layout: tools
   <script src="https://cdn.bootcss.com/clipboard.js/2.0.4/clipboard.min.js">
 	</script> 
   <script src="/js/json2go.js"></script>
+  <script src="/js/common.js"></script>
   <script>
     function tagName() {
       return document.getElementById("tag").value
