--- a/content/tools/sql2gorm/index.html
+++ b/content/tools/sql2gorm/index.html
@@ -56,7 +56,7 @@ layout: tools
 	</script> 
   <script src="/js/jquery.js"></script>
   <script src="/layer/layer.js"></script>
-
+  <script src="/js/common.js"></script>
   <script>
     document.getElementById("btnExpan").onclick = function() {
       convert()
@@ -104,6 +104,7 @@ layout: tools
      
       input.innerHTML = hljs.highlight("sql", sql).value
     }
+
 
     convert()
 	</script> 
